rename data csv files with year appendix

--- a/notebooks/battle-of-giants.ipynb
+++ b/notebooks/battle-of-giants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/luci/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (0,3,7,19,34,47,49,50,51,52,53,54,68,81,94,96,109,115,130,139,147,154,167,180,193,206,219,232,245) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3257,19 +3265,19 @@
        "4                                                                                                                         -1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data_raw/multiple_choice_responses.csv\")\n",
+    "df = pd.read_csv(\"../data_raw/multiple_choice_responses_2019.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3303,12 +3311,12 @@
        "Singapore                                                156\n",
        "Bangladesh                                               136\n",
        "Viet Nam                                                 128\n",
-       "Argentina                                                123\n",
        "Morocco                                                  123\n",
+       "Argentina                                                123\n",
        "Egypt                                                    122\n",
        "South Africa                                             120\n",
-       "Portugal                                                 114\n",
        "Kenya                                                    114\n",
+       "Portugal                                                 114\n",
        "Greece                                                   108\n",
        "Israel                                                   104\n",
        "Switzerland                                               97\n",
@@ -3320,25 +3328,25 @@
        "Peru                                                      74\n",
        "Republic of Korea                                         73\n",
        "Belgium                                                   70\n",
-       "Tunisia                                                   68\n",
        "Belarus                                                   68\n",
+       "Tunisia                                                   68\n",
        "Thailand                                                  67\n",
        "Philippines                                               65\n",
        "Hong Kong (S.A.R.)                                        64\n",
-       "Algeria                                                   58\n",
-       "Czech Republic                                            58\n",
        "Romania                                                   58\n",
+       "Czech Republic                                            58\n",
+       "Algeria                                                   58\n",
        "Hungary                                                   56\n",
        "Denmark                                                   55\n",
        "Austria                                                   53\n",
-       "New Zealand                                               51\n",
        "Norway                                                    51\n",
+       "New Zealand                                               51\n",
        "Saudi Arabia                                              50\n",
        "In which country do you currently reside?                  1\n",
        "Name: Q3, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3349,7 +3357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3358,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3367,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3376,7 +3384,7 @@
        "4786"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3387,7 +3395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3396,7 +3404,7 @@
        "3085"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3407,7 +3415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3416,7 +3424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3425,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3442,7 +3450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3459,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3468,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3477,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3494,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3511,7 +3519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3520,7 +3528,7 @@
        "19718"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3531,7 +3539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3540,7 +3548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3549,7 +3557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3566,7 +3574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
