add comment sections

--- a/notebooks/battle-of-giants.ipynb
+++ b/notebooks/battle-of-giants.ipynb
@@ -3311,8 +3311,8 @@
        "Singapore                                                156\n",
        "Bangladesh                                               136\n",
        "Viet Nam                                                 128\n",
-       "Morocco                                                  123\n",
        "Argentina                                                123\n",
+       "Morocco                                                  123\n",
        "Egypt                                                    122\n",
        "South Africa                                             120\n",
        "Kenya                                                    114\n",
@@ -3328,19 +3328,19 @@
        "Peru                                                      74\n",
        "Republic of Korea                                         73\n",
        "Belgium                                                   70\n",
-       "Belarus                                                   68\n",
        "Tunisia                                                   68\n",
+       "Belarus                                                   68\n",
        "Thailand                                                  67\n",
        "Philippines                                               65\n",
        "Hong Kong (S.A.R.)                                        64\n",
-       "Romania                                                   58\n",
        "Czech Republic                                            58\n",
        "Algeria                                                   58\n",
+       "Romania                                                   58\n",
        "Hungary                                                   56\n",
        "Denmark                                                   55\n",
        "Austria                                                   53\n",
-       "Norway                                                    51\n",
        "New Zealand                                               51\n",
+       "Norway                                                    51\n",
        "Saudi Arabia                                              50\n",
        "In which country do you currently reside?                  1\n",
        "Name: Q3, dtype: int64"
@@ -3353,6 +3353,13 @@
    ],
    "source": [
     "df[\"Q3\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting datasets by country: India and US"
    ]
   },
   {
@@ -3396,7 +3403,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3411,6 +3420,13 @@
    ],
    "source": [
     "len(usa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examination: Gender proportions"
    ]
   },
   {
