--- a/notebooks/battle-of-giants.ipynb
+++ b/notebooks/battle-of-giants.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd, numpy as np\n",
     "import numpy as np\n",
     "\n",
+    "import plotly_express as px\n",
+    "\n",
     "pd.set_option(\"display.max_rows\", 500)\n",
-    "pd.set_option(\"display.max_columns\", 5400)\n",
+    "pd.set_option(\"display.max_columns\", 100)\n",
     "pd.set_option(\"display.max_colwidth\", 500)"
    ]
   },
@@ -3622,7 +3624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
